Default.css: fix persistent vertical scrollbar
No matter how tall you make your browser window, SMR will always
have a vertical scrollbar because the CSS body height was set to
100% with a 10px padding. If we subtract those 10px from the height,
then we no longer get a scrollbar when the browser window is
sufficiently tall.

Leave the original value as a fallback for older browsers.

--- a/htdocs/originalCSS/Default.css
+++ b/htdocs/originalCSS/Default.css
@@ -1,7 +1,8 @@
 @import url('shared.css');
 
 html, body {
-	height: 100%;
+	height: 100%; /* fallback for older browsers */
+	height: calc(100% - 10px); /* Account for padding to fix persistent vertical scrollbar */
 }
 body {
 	font-family: Arial, Sans-Serif;
